# agenthack

./: .gitignore  README.md  agenthack.yaml.example  pyproject.toml
src/agenthack/: __init__.py  cli.py  config.py  orchestrator.py  schemas.py
src/agenthack/phases/: build.py  hackathon.py  judge.py  scout.py
src/agenthack/utils/: llm.py  output.py  publish.py  scraper.py
